# libbanking

./: .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure  configure.ac  rebuild.sh
include/: 2Dmatrix.h  t_cfg.h  t_class.h  t_csv.h  t_tree.h  t_xml.h  transaction.h  transaction_class.h  transaction_tree_node.h  transactions_cfg.h  transactions_configuration.h  transactions_csv.h  transactions_tree.h  types.h
src/: 2Dmatrix.cpp  Makefile.am  t_cfg.cpp  t_class.cpp  t_csv.cpp  t_tree.cpp  t_xml.cpp  transaction.cpp  transaction_class.cpp  transaction_tree_node.cpp  transactions_cfg.cpp  transactions_configuration.cpp  transactions_csv.cpp  transactions_tree.cpp
test/: Makefile.am  classification.xml  classification.xsl  driver.cpp  t_set.xml  transactions.csv  transactions_in.csv  transactions_out.xml
